logs/dag_id=dag_allocate_messages/run_id=manual__2024-03-27T14:48:11.830122+00:00/task_id=select_and_allocate_messages/attempt=1.log
[2024-03-27T14:48:13.127+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_allocate_messages.select_and_allocate_messages manual__2024-03-27T14:48:11.830122+00:00 [queued]>
[2024-03-27T14:48:13.152+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_allocate_messages.select_and_allocate_messages manual__2024-03-27T14:48:11.830122+00:00 [queued]>
[2024-03-27T14:48:13.153+0000] {taskinstance.py:2193} INFO - Starting attempt 1 of 6
[2024-03-27T14:48:13.193+0000] {taskinstance.py:2214} INFO - Executing <Task(PythonOperator): select_and_allocate_messages> on 2024-03-27 14:48:11.830122+00:00
[2024-03-27T14:48:13.203+0000] {standard_task_runner.py:60} INFO - Started process 13385 to run task
[2024-03-27T14:48:13.217+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_allocate_messages', 'select_and_allocate_messages', 'manual__2024-03-27T14:48:11.830122+00:00', '--job-id', '1075', '--raw', '--subdir', 'DAGS_FOLDER/dag_allocate_messages.py', '--cfg-path', '/tmp/tmpvqp2u01t']
[2024-03-27T14:48:13.223+0000] {standard_task_runner.py:88} INFO - Job 1075: Subtask select_and_allocate_messages
[2024-03-27T14:48:13.356+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_allocate_messages.select_and_allocate_messages manual__2024-03-27T14:48:11.830122+00:00 [running]> on host 932f824b7ebb
[2024-03-27T14:48:13.592+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='daniel' AIRFLOW_CTX_DAG_ID='dag_allocate_messages' AIRFLOW_CTX_TASK_ID='select_and_allocate_messages' AIRFLOW_CTX_EXECUTION_DATE='2024-03-27T14:48:11.830122+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-03-27T14:48:11.830122+00:00'
[2024-03-27T14:48:13.619+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-27T14:48:13.655+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dag_allocate_messages.py", line 21, in select_and_allocate_messages
    insert_message(cursor, "success_messages", message)
  File "/opt/airflow/dags/dag_allocate_messages.py", line 41, in insert_message
    cursor.execute(
psycopg2.errors.SyntaxError: syntax error at or near "'success_messages'"
LINE 1: INSERT INTO 'success_messages' (msg_id, msg_date, msg_time, ...
                    ^

[2024-03-27T14:48:13.684+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_allocate_messages, task_id=select_and_allocate_messages, execution_date=20240327T144811, start_date=20240327T144813, end_date=20240327T144813
[2024-03-27T14:48:13.716+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1075 for task select_and_allocate_messages (syntax error at or near "'success_messages'"
LINE 1: INSERT INTO 'success_messages' (msg_id, msg_date, msg_time, ...
                    ^
; 13385)
[2024-03-27T14:48:13.754+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-27T14:48:13.799+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
